# hiq2024

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
lib/: CMakeLists.txt
lib/include/hiq/board/: board.h
lib/include/hiq/command/: CarCmdExecutor.h  ICommandExecutor.h
lib/include/hiq/game/: CarGame.h  IGame.h
lib/include/hiq/geometry/: Direction.h  Point2D.h  Point2DFwd.h
lib/include/hiq/vehicle/: Car.h  IVehicle.h
lib/src/hiq/: Point2D.cpp
lib/src/hiq/board/: board.cpp
lib/src/hiq/command/: CarCmdExecutor.cpp
lib/src/hiq/game/: CarGame.cpp
lib/src/hiq/vehicle/: Car.cpp
utils/: CMakeLists.txt
utils/include/utils/: ctre.hpp  utils.h
utils/src/utils/: utils.cpp
